--- a/shopping-cart/src/main/resources/templates/admin/pages/index.html
+++ b/shopping-cart/src/main/resources/templates/admin/pages/index.html
@@ -7,21 +7,23 @@
    
       <div class="container">
        <h1 class="display-2">Pages</h1>
-       <a href="/admin/pages/add" class="btn btn-primary mb-5">Add new</a>
+	   <a href="/admin/pages/add" class="btn btn-primary mb-5">Add new</a>
+	   
+	   <div th:if="${message}" th:text="${message}" th:class="${'alert ' + alertClass}"></div>
        
        <div th:if="${!pages.empty}">
-       		<table class="table">
-       			<tr>
+       		<table class="table sorting" id="pages">
+       			<tr class="home">
        				<th>Title</th>
        				<th>Slug</th>
        				<th>Edit</th>
        				<th>Delete</th>
        			</tr>
-       			<tr th:each="page: ${pages}">
+       			<tr th:each="page: ${pages}" th:id="'id_' + ${page.slug}">
        				<td th:text="${page.title}"></td>
        				<td th:text="${page.slug}"></td>
-       				<td><a th:href="@{'admin/pages/edit/' + ${page.id}}">Edit</td>
-       				<td><a th:href="@{'admin/pages/delete/' + ${page.id}}">Delete</td>
+       				<td><a th:href="@{'/admin/pages/edit/' + ${page.id}}">Edit</td>
+       				<td><a th:if="${page.slug != 'home'}" th:href="@{'/admin/pages/delete/' + ${page.id}}" class="confirmDeletion">Delete</td>
        			</tr>
        		</table>
        </div>
@@ -30,7 +32,22 @@
        </div>
         
       </div>
-       <footer th:replace="/fragments/footer"></footer>
+	   <footer th:replace="/fragments/footer"></footer>
+	   
+	   <script>
+		 $("table#pages tbody").sortable({
+        items: "tr:not(.home)",
+        placeholder: "ui-state-highlight",
+        update: function() {
+            let ids = $("table#pages tbody").sortable("serialize");
+            let url = "/admin/pages/reorder";
+
+            $.post(url, ids, function (data) {
+                console.log(data);
+            });
+        }
+    });
+		</script>
 
 </body>
 </html>
