--- a/shopping-cart/src/main/resources/templates/fragments/footer.html
+++ b/shopping-cart/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,7 @@
  <footer class="container" th:fragment="footer">
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-      <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-	  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+      <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+       <script th:src="@{/js/app.js}"></script>
 </footer>
