--- a/shopping-cart/src/main/resources/templates/fragments/nav.html
+++ b/shopping-cart/src/main/resources/templates/fragments/nav.html
@@ -29,6 +29,12 @@
           <li class="nav-item active">
             <a class="nav-link" href="/admin/pages">Pages</a>
           </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/admin/categories">Categories</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="/admin/products">Products</a>
+          </li>
          
         </ul>
       
