--- a/shopping-cart/src/main/resources/templates/admin/products/edit.html
+++ b/shopping-cart/src/main/resources/templates/admin/products/edit.html
@@ -9,12 +9,12 @@
 
     <div class="container">
 
-        <h1 class="display-2">Add a Product</h1>
+        <h1 class="display-2" th:text="'Edit ' + ( ${productName} ?: ${product.name} )"></h1>
         <a href="/admin/products" class="btn btn-primary mb-5">Back to products</a>
 
         <div th:if="${message}" th:text="${message}" th:class="${'alert ' + alertClass}"></div>
 
-        <form method="post" th:object="${product}" th:action="@{/admin/products/add}" enctype="multipart/form-data">
+        <form method="post" th:object="${product}" th:action="@{/admin/products/edit}" enctype="multipart/form-data">
 
             <div th:if="${#fields.hasErrors('*')}" class="alert alert-danger">
                 There are errors
@@ -33,12 +33,15 @@
             </div>
 
             <div class="form-group">
-            <label for="">Image:</label>
-             <input type="file" class="form-control" th:name="file">
-             <img class="mt-2" src="#" alt="" id="imgPreview1">
-             </div>
+                <label for="">Image:</label>
+                <input type="file" class="form-control" th:name="file" th:id="file">
+                <img class="mt-2" src="#" alt="" id="imgPreview1">
+                <br><br>
+                <label for="">Current image:</label>
+                <img style="width: 200px;" th:src="@{'/media/' + ${product.image}}">
+            </div>
 
-             <div class="form-group">
+            <div class="form-group">
                 <label for="">Price:</label>
                 <input type="text" class="form-control" th:field="*{price}" placeholder="20 or 20.99">
                 <span class="error" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"></span>
@@ -53,9 +56,9 @@
                 <span class="error" th:if="${#fields.hasErrors('categoryId')}" th:errors="*{categoryId}"></span>
             </div>
 
+            <input type="hidden" th:field="*{id}" th:value="${product.id}">
 
-
-            <button class="btn btn-danger mb-5">Add</button>
+            <button class="btn btn-danger mb-5">Edit</button>
 
         </form>
 
@@ -63,15 +66,16 @@
 
     <div th:replace="/fragments/footer"></div>
 
-
     <script>
-             $(function () {
 
-                $("#file").change(function () {
-                    readURL(this, '1');
-                });
+    $(function () {
 
-                });
+        $("#file").change(function () {
+            readURL(this, '1');
+        });
+
+    });
+
     </script>
 
 </body>
