--- a/shopping-cart/src/main/resources/templates/admin/products/index.html
+++ b/shopping-cart/src/main/resources/templates/admin/products/index.html
@@ -26,9 +26,11 @@
                 </tr>
                 <tr th:each="product: ${products}">
 					<td th:text="${product.name}"></td>
-					<td th:text="${product.image}"></td>
-					<td th:text="${product.category_id}"></td>
-					<td th:text="${product.price}"></td>
+					<td>
+                        <img style="width: 100px;" th:src="@{'/media/' + ${product.image}}">
+                    </td>
+					<td th:text="${cats[__${product.categoryId}__]}"></td>
+                    <td th:text="'$ ' + ${product.price}"></td>
 					<td><a th:href="@{'/admin/products/edit/' + ${product.id}}">Edit</td>
 						<td><a th:href="@{'/admin/products/delete/' + ${product.id}}" class="confirmDeletion">Delete</td>
                     </tr>
