added shopping cart and user control

--- a/shopping-cart/src/main/resources/templates/admin/products/index.html
+++ b/shopping-cart/src/main/resources/templates/admin/products/index.html
@@ -28,6 +28,7 @@
 					<td th:text="${product.name}"></td>
 					<td>
                         <img style="width: 100px;" th:src="@{'/media/' + ${product.image}}">
+         
                     </td>
 					<td th:text="${cats[__${product.categoryId}__]}"></td>
                     <td th:text="'$ ' + ${product.price}"></td>
@@ -36,6 +37,20 @@
                     </tr>
             </table>
         </div>
+
+        <nav class="mt-3" th:if="${count > perPage}">
+            <ul class="pagination">
+                <li class="page-item" th:if="${page > 0}">
+                    <a th:href="@{${#httpServletRequest.requestURI}} + '?page=__${page-1}__'" class="page-link">Previous</a>
+                </li>
+                <li class="page-item" th:each="number: ${#numbers.sequence(0, pageCount-1)}" th:classappend="${page==number} ? 'active' : ''">
+                    <a th:href="@{${#httpServletRequest.requestURI}} + '?page=__${number}__'" class="page-link" th:text="${number+1}"></a>
+                </li>
+                <li class="page-item" th:if="${page < pageCount-1}">
+                    <a th:href="@{${#httpServletRequest.requestURI}} + '?page=__${page+1}__'" class="page-link">Next</a>
+                </li>
+            </ul>
+        </nav>
 
 
         <div th:unless="${!products.empty}">
