--- a/shopping-cart/src/main/resources/templates/fragments/footer.html
+++ b/shopping-cart/src/main/resources/templates/fragments/footer.html
@@ -3,5 +3,6 @@
      <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-       <script th:src="@{/js/app.js}"></script>
+      <script src="https://cdn.ckeditor.com/ckeditor5/24.0.0/classic/ckeditor.js"></script>
+      <script th:src="@{/js/app.js}"></script>
 </footer>
